css/style-VERSIONED.css
/* ... */
.admonition-title {
    margin-bottom: 0.25em;
    font-weight: bold;
}

.admonition::before {
    content: "";
    width: 2.875em;
    height: 100%;
    position: absolute;
    top: 0.125em;
    right: 100%;
    padding: 0.60em;
    box-sizing: border-box;
    background-origin: content-box;
    background-clip: content-box;
    background-repeat: no-repeat;
}

.admonition.tip::before {
    background-image: url('/static/img/icon/icons.svg?v=1687197767#info-circle-regular');
}
.admonition.note::before {
    background-image: url('/static/img/icon/icons.svg?v=1687197767#hand-point-right-regular');
    filter: invert(1);
}
.admonition.warning::before {
    background-image: url('/static/img/icon/icons.svg?v=1687197767#triangle-exclamation-regular');
    filter: invert(1);
}
.admonition.error::before {
    background-image: url('/static/img/icon/icons.svg?v=1687197767#skull-crossbones-solid');
    padding: 0.75em;
    top: 0;
    filter: invert(1);
}

.admonition code {
    --GW-code-element-background-color: transparent;

    border: none;
    padding-left: 0;
    font-size: unset;
}

.admonition .footnote-ref {
    text-shadow: none;
}


/**********/
/* TABLES */
/**********/

table {
    margin: 0 auto;
    padding: 0;
    border-collapse: collapse;
    width: 100%;
    font-size: 0.75em;
    border-style: solid;
    border-color: var(--GW-table-border-color);
    border-width: 2px 0;
}

.table-wrapper {
    margin-left: auto;
    margin-right: auto;
}

.table-scroll-wrapper {
    overflow-x: auto;
    overflow-y: hidden;
}

/*=-------------------=*/
/*= Full-width tables =*/
/*=-------------------=*/

.width-full table {
    width: fit-content;
    background-color: var(--background-color);
}

/*=--------------=*/
/*= Small tables =*/
/*=--------------=*/

.table-wrapper.table-small {
    width: fit-content;
}

/*  Floating small tables.
    NOTE: we do not float small tables by default, although this is an appealing idea because so many small tables could be floated usefully, especially in popups.
    But when tried on heavy users like /clone#mackenzie-et-al-1986 or /ab-testing, floated small tables interact badly with code blocks/paragraphs/figures. One would need more intelligence than just making them all float left (or right), so they are left unfloated and must be manually floated (usually in a left/right zig-zag).
 */
@media all and (min-width: 650px) {
	.table-small.float {
		max-width: calc(50% - var(--float-side-margin));
        margin-bottom: calc(var(--float-side-margin) * 0.5);
	}
	.table-small.float-left {
		float: left;
		clear: right;
		margin-right: var(--float-side-margin);
	}
	.table-small.float-right {
		float: right;
		clear: left;
		margin-left: var(--float-side-margin);
	}
}

/*=-------------=*/
/*= Table parts =*/
/*=-------------=*/

table caption {
	--text-hyphenation: none;

    padding: 0.25em 0.75em;
    font-style: italic;
    font-size: 1.25em;
    border-top: 2px solid var(--GW-table-caption-border-color);
    background-color: inherit;
}

table th,
table td {
    padding: 7px 10px;
    line-height: 1.35;
}
table th {
	--text-hyphenation: none;

    font-weight: bold;
    border-bottom: 1px solid var(--GW-table-row-horizontal-border-color);
    text-align: left;
}
table td {
    vertical-align: top;
}
table th + th,
table td + td {
    border-left: 1px solid var(--background-color);
}

table td > code {
    word-break: normal;
}

/*  Horizontal scroll bar styles (for WebKit/Chromium).
    */
.table-scroll-wrapper::-webkit-scrollbar {
    height: 16px;
}
.table-scroll-wrapper::-webkit-scrollbar-thumb {
    background-image: var(--GW-checkerboard-scrollbar-background-image);
    background-size: 2px;
    box-shadow:
        0 2px 0 0   var(--background-color) inset,
        0 0   0 1px var(--GW-table-scrollbar-border-color) inset,
        0 2px 0 1px var(--GW-table-scrollbar-border-color) inset;
}
.table-scroll-wrapper::-webkit-scrollbar-thumb:hover {
    background-image: var(--GW-checkerboard-scrollbar-hover-background-image);
}
@media all and (max-width: 649px) {
    .table-scroll-wrapper::-webkit-scrollbar {
        height: 6px;
    }
}

/*  Horizontal scroll bar styles (for Firefox).
    */
.table-scroll-wrapper {
    scrollbar-color: var(--GW-table-scrollbar-thumb-color) var(--background-color);
}
.table-scroll-wrapper:hover {
    scrollbar-color: var(--GW-table-scrollbar-thumb-hover-color) var(--background-color);
}

/*  Add little icons to tables handled by tablesorter.js
    to advertise that they are sortable.
    https://mottie.github.io/tablesorter/docs/#Configuration
    */
th.tablesorter-header {
    background-image: url('/static/img/tablesorter/tablesorter-bg.gif');
    cursor: pointer;
    font-weight: bold;
    background-repeat: no-repeat;
    background-position: center left;
    padding-left: 20px;
}
th.tablesorter-header:hover {
    background-color: var(--GW-table-column-heading-hover-background-color);
}
th.tablesorter-header:focus {
    outline: none;
}
th.tablesorter-headerAsc {
    background-image: url('/static/img/tablesorter/tablesorter-asc.gif');
}
th.tablesorter-headerDesc {
    background-image: url('/static/img/tablesorter/tablesorter-desc.gif');
}
th.tablesorter-headerAsc,
th.tablesorter-headerDesc,
th.tablesorter-headerAsc:hover,
th.tablesorter-headerDesc:hover {
    background-color: var(--GW-table-sorted-column-heading-background-color);
    color: var(--GW-table-sorted-column-heading-text-color);
    text-shadow:
       0.5px 0.5px 0 var(--GW-table-sorted-column-heading-text-shadow-color),
       0 0 1px var(--GW-table-sorted-column-heading-text-shadow-color);
}

/*  Zebra-stripe tables (CSS3); from Twitter’s bootstrap package.
    NOTE: we tried 3-cycle zebra striping tables, but didn’t pass muster.
    */
table tr:nth-child(odd) td {
    --background-color: var(--GW-table-zebra-stripe-alternate-row-background-color);

    background-color: var(--background-color);
}
/* ... */

