Fix another layout bug

--- a/css/style-VERSIONED.css
+++ b/css/style-VERSIONED.css
@@ -2321,18 +2321,18 @@ p.intro-graf::first-line {
 }
 
 .admonition.tip::before {
-    background-image: url('/static/img/icon/icons.svg?v=1687197767#info-circle-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1687199211#info-circle-regular');
 }
 .admonition.note::before {
-    background-image: url('/static/img/icon/icons.svg?v=1687197767#hand-point-right-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1687199211#hand-point-right-regular');
     filter: invert(1);
 }
 .admonition.warning::before {
-    background-image: url('/static/img/icon/icons.svg?v=1687197767#triangle-exclamation-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1687199211#triangle-exclamation-regular');
     filter: invert(1);
 }
 .admonition.error::before {
-    background-image: url('/static/img/icon/icons.svg?v=1687197767#skull-crossbones-solid');
+    background-image: url('/static/img/icon/icons.svg?v=1687199211#skull-crossbones-solid');
     padding: 0.75em;
     top: 0;
     filter: invert(1);
@@ -5278,14 +5278,14 @@ body.lorem div[class^='drop-cap'] {
 /*  Loading spinner (for object popups).
  */
 .popup.loading::before {
-    background-image: url('/static/img/icon/icons.svg?v=1687197767#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1687199211#circle-notch-light');
     animation: fa-spin 2s infinite linear;
 }
 
 /*  Rendering spinner.
  */
 .popup.rendering::before {
-    background-image: url('/static/img/icon/icons.svg?v=1687197767#spinner-third-light');
+    background-image: url('/static/img/icon/icons.svg?v=1687199211#spinner-third-light');
     animation: fa-spin 3s infinite linear;
 }
 
@@ -5418,7 +5418,7 @@ body.lorem div[class^='drop-cap'] {
     */
 .popup.image:not(.dimensions-specified).loading-failed::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1687197767#xmark-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1687199211#xmark-regular');
     background-position: center;
     box-sizing: border-box;
     margin: 8px;
@@ -5845,14 +5845,14 @@ body.lorem div[class^='drop-cap'] {
 /*  Loading spinner (for object popins).
  */
 .popin.loading::before {
-    background-image: url('/static/img/icon/icons.svg?v=1687197767#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1687199211#circle-notch-light');
     animation: fa-spin 2s infinite linear;
 }
 
 /*  Rendering spinner.
  */
 .popin.rendering::before {
-    background-image: url('/static/img/icon/icons.svg?v=1687197767#spinner-third-light');
+    background-image: url('/static/img/icon/icons.svg?v=1687199211#spinner-third-light');
     animation: fa-spin 3s infinite linear;
 }
 
@@ -6733,7 +6733,7 @@ a.spawns-popin.popin-open:not(.footnote-ref) {
 
 #image-focus-overlay .help-overlay::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1687197767#question');
+    background-image: url('/static/img/icon/icons.svg?v=1687199211#question');
     background-origin: content-box;
     background-clip: content-box;
     position: absolute;
@@ -7239,7 +7239,7 @@ a.include-loading-failed:empty {
 }
 
 a.include-loading.include-spinner {
-    --spinner-image: url('/static/img/icon/icons.svg?v=1687197767#circle-notch-solid');
+    --spinner-image: url('/static/img/icon/icons.svg?v=1687199211#circle-notch-solid');
 
     pointer-events: none;
 }
